--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ sidebar-avatar: /img/drose.jpg      # use absolute URL, seeing it's used in both
 # SNS settings
 RSS: false
 # weibo_username:     qiubaiying
-zhihu_username:     Lee96
+zhihu_username:     li-yu-3-21
 github_username:    lee1996
 facebook_username:  
 jianshu_username:   
